--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.16",
