--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
