--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "sanitize-html": "^2.15.0",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.16",
     "web-vitals": "^2.1.4"
